--- a/main.bib
+++ b/main.bib
@@ -1,15 +1,16 @@
 
-% Dynamic Symmetry breaking approches
+% == Dynamic Symmetry breaking approches
 
-% Symchaff
-@inproceedings{moskewicz2001chaff,
-	title={Chaff: Engineering an efficient SAT solver},
-	author={Moskewicz, Matthew W and Madigan, Conor F and Zhao, Ying and Zhang, Lintao and Malik, Sharad},
-	booktitle={Proceedings of the 38th annual Design Automation Conference},
-	pages={530--535},
-	year={2001},
-	organization={ACM}
+% Symmchaff
+@inproceedings{sabharwal2005symchaff,
+	title={SymChaff: A structure-aware satisfiability solver},
+	author={Sabharwal, Ashish},
+	booktitle={AAAI},
+	volume={5},
+	pages={467--474},
+	year={2005}
 }
+
 
 % Cosy
 @inproceedings{metin2018cdclsym,
@@ -36,6 +37,15 @@
 	
 }
 
+% SEL
+@inproceedings{devriendt2017symmetric,
+	title={Symmetric explanation learning: Effective dynamic symmetry handling for SAT},
+	author={Devriendt, Jo and Bogaerts, Bart and Bruynooghe, Maurice},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={83--100},
+	year={2017},
+	organization={Springer}
+}
 
 % SAT heuristics
 
@@ -196,6 +206,7 @@
 	author={Crawford, James and Ginsberg, Matthew},
 	year={1996}
 }
+
 
 
 % Source Wikipedia
