--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage{amsfonts}
 \usepackage{amsmath,amssymb}
 \usepackage{amsthm}
+\usepackage{float}
 \usepackage{dsfont}
 \usepackage{cleveref}
 \usepackage{enumitem}
@@ -69,6 +70,7 @@
 \frontmatter
 
 
+
 \input{title}
 \input{preface}
 
@@ -83,13 +85,12 @@
 \mainmatter
 
 \input{TODO}
-
 % Chapters
 \input{introduction}
 \input{preliminaries}
 \input{symmetryinsat}
 \input{cosy}
-\input{conclusion}
+%\input{conclusion}
 
 \balance
 \bibliographystyle{abbrv}
