--- a/main.tex
+++ b/main.tex
@@ -22,11 +22,11 @@
 \usepackage{amsthm}
 \usepackage{float}
 \usepackage{dsfont}
-\usepackage{cleveref}
 \usepackage{enumitem}
 \usepackage{listings}
 \usepackage[vlined,linesnumbered,boxed]{algorithm2e}
 \usepackage{times}
+\usepackage{cleveref}
 
 %%% Colors ====================================================================
 \definecolor{phdcol0}{RGB}{0,47,107}
@@ -97,6 +97,8 @@
 \bibliography{main}
 
 \end{document}
+
+% ESPACE SEQUABLE METTRE \-
 
 
 %% Local Variables:
