--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \usepackage{ccicons}
 \usepackage{soul}
 \usepackage{amsfonts}
+\usepackage{pifont}
 \usepackage{amsmath,amssymb}
 \usepackage{amsthm}
 \usepackage{float}
