--- a/fig/naive_algorithm.tex
+++ b/fig/naive_algorithm.tex
@@ -1,6 +1,8 @@
 
 \begin{minipage}[c]{0.6\linewidth}
 \begin{tikzpicture}[level/.style={sibling distance=60mm/#1},every node/.style={scale=0.6}, scale=0.6]
+  \tikzstyle{trans}=[thick, ->, sloped]
+
 \node [circle,draw] (x1) {$x_1$}
   child {node [circle,draw] (x2_1) {$x_2$}
     child {node [circle,draw] (x3_1) {$x_3$}
@@ -32,7 +34,19 @@
       }
   }
 };
-\path (x6_2) -- (x6_3) node (x) [midway] {$\cdots$};
+
+\path (x6_2) -- (x6_3) node (x) [midway] {$\cdots$}
+        child { node (a_11) {$\alpha_{11}$} edge from parent[draw=none]};
+
+
+\path (a2) -- (a_11) node (b1) [midway] {$\cdots$};
+\path (a_11) -- (an_1) node (b2) [midway] {$\cdots$};
+
+\draw[trans] (a1) to [bend right]  (a2);
+\draw[trans] (a2) to [bend right]  (b1);
+\draw[trans] (b1) to [bend right]  (a_11);
+
+% to [bend right]  (b1) to [bend right]  (a_11);
 
 \path (x1)   -- (x2_1) node [midway, fill=white] {$0$};
 \path (x2_1) -- (x3_1) node [midway, fill=white] {$0$};
